freshener/manifests/catalogue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogue
  labels:
    service: catalogue
spec:
  replicas: 1
  selector:
    matchLabels:
      service: catalogue
  template:
    metadata:
      labels:
        service: catalogue
    spec:
      serviceAccountName: robot-shop
      containers:
      - name: catalogue
        image: robotshop/rs-catalogue:latest
        imagePullPolicy: IfNotPresent
      - name: dynatrace
        image: dynatrace/oneagent
      - name: search-engine
        image: mamarino/search-engine:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
      restartPolicy: Always
