freshener/manifests/magic_depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magicball
  labels:
    app: magicball
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magicball
  template:
    metadata:
      labels:
        app: magicball
    spec:
      containers:
      - name: magicball-server
        image: docker.io/gbsal/magicball-server
        ports:
        - containerPort: 8080
          protocol: TCP
        restartPolicy: Always
      - name: stub
        image: stub/img
