freshener/manifests/payments-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments
  labels:
    service: payments
    stage: prod
spec:
  hostNetwork: true
  replicas: 1
  selector:
    matchLabels:
      service: payments
      stage: prod
  template:
    metadata:
      labels:
        service: payments
        stage: prod
    spec:
      serviceAccountName: robot-shop
      containers:
      - name: payments
        image: robotshop/rs-payments:latest
        imagePullPolicy: IfNotPresent
        # agent networking access
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
      restartPolicy: Always
