freshener/manifests/user-manager-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-manager
  labels:
    service: user-manager
spec:
  replicas: 1
  selector:
    matchLabels:
      service: user-manager
  template:
    metadata:
      labels:
        service: user-manager
    spec:
      serviceAccountName: robot-shop
      containers:
      - name: user-manager
        image: robotshop/rs-user-manager:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
      restartPolicy: Always
