freshener/manifests/cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart
  labels:
    service: cart
spec:
  replicas: 1
  selector:
    matchLabels:
      service: cart
  template:
    metadata:
      labels:
        service: cart
    spec:
      serviceAccountName: robot-shop
      containers:
      - name: cart
        image: robotshop/rs-cart:latest
        imagePullPolicy: IfNotPresent
        # agent networking access
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: cart-srv
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    service: cart
