freshener/manifests/categories.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: categories
  labels:
    service: categories
spec:
  replicas: 1
  selector:
    matchLabels:
      service: categories
  template:
    metadata:
      labels:
        service: categories
    spec:
      serviceAccountName: robot-shop
      containers:
      - name: categories
        image: robotshop/rs-categories:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 200m
            memory: 100Mi
          requests:
            cpu: 100m
            memory: 50Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: categories
  name: categories-srv
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    service: categories
