freshener/manifests/mongo-orders-srv-Service.yaml

apiVersion: v1
kind: Service
metadata:
  name: mongo-orders-srv
spec:
  selector:
    app: mongo-orders
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
