freshener/manifests/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    service: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mongodb
  template:
    metadata:
      labels:
        service: mongodb
    spec:
      serviceAccountName: robot-shop
      containers:
      - name: mongodb
        image: robotshop/rs-mongodb:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 27017
        resources:
          limits:
            cpu: 200m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: mongodb
  name: mongodb
spec:
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
  selector:
    service: mongodb
