freshener/manifests/mysql-users-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-users
spec:
  selector:
    matchLabels:
      app: name: mysql-users
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: name: mysql-users
    spec:
      containers:
      - image: mamarino/mysql-users:latest
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-users-srv
spec:
  ports:
  - port: 3306
  selector:
    app: mysql-users
