freshener/manifests/mysql-users-srv-Service.yaml

apiVersion: v1
kind: Service
metadata:
  name: mysql-users-srv
spec:
  ports:
  - port: 3306
  selector:
    app: mysql-users
