freshener/manifests/catalog-virtual-service.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog
spec:
  hosts:
  - catalog
  http:
  - timeout: 5s
    route:
    - destination:
        host: catalog
